added nfr sys tests for 2, 14, 19,20

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -243,17 +243,15 @@
 	\wss{Include a blurb here to explain why the subsections below
 		cover the requirements.  References to the SRS would be good here.}
 	
-	\subsubsection{Workout Routine Tests}
-	
 	\wss{It would be nice to have a blurb here to explain why the subsections below
 		cover the requirements.  References to the SRS would be good here.  If a section
 		covers tests for input constraints, you should reference the data constraints
 		table in the SRS.}
 	
-	\paragraph{A Workout Routine can be Created}
 	\begin{enumerate}
 		
-		\item{\textbf{test-WR-1}}
+		\subsubsection{Workout Routine Tests}
+		\item{\textbf{test-WR-1}}:A Workout Routine can be Created
 		
 		Control: Manual
 		
@@ -269,8 +267,7 @@
 		
 		Requirement(s): R1
 		
-		\paragraph{Editing a Workout Routine}
-		\item{\textbf{test-WR-2}}
+		\item{\textbf{test-WR-2}}: Editing a Workout Routine
 		
 		Control: Manual
 		
@@ -287,8 +284,7 @@
 		Requirement(s): R1
 		
 		\subsubsection{Exercise Tests}
-		\paragraph{Adding an Exercise to a Workout Routine}
-		\item{\textbf{test-EX-1}}
+		\item{\textbf{test-EX-1}}:Adding an Exercise to a Workout Routine
 
 		Control: Manual
 		
@@ -304,8 +300,8 @@
 		
 		Requirement(s): R2
 		
-		\paragraph{Removing an Exercise from a Workout Routine}
-		\item{\textbf{test-EX-2}}
+		
+		\item{\textbf{test-EX-2}}:Removing an Exercise from a Workout Routine
 		
 		Control: Manual
 		
@@ -321,8 +317,8 @@
 		
 		Requirement(s): R2
 		
-		\paragraph{Limiting Exercises to a Workout Routine}
-		\item{\textbf{test-EX-3}}
+		
+		\item{\textbf{test-EX-3}}:Limiting Exercises to a Workout Routine
 		
 		Control: Manual
 		
@@ -339,8 +335,7 @@
 		Requirement(s): R2
 		
 		\subsubsection{Quantifier Tests}
-		\paragraph{Adding Quantifiers to an Exercise}
-		\item{\textbf{test-QT-1}}
+		\item{\textbf{test-QT-1}}:Adding Quantifiers to an Exercise
 		
 		Control: Manual
 		
@@ -356,8 +351,7 @@
 		
 		Requirement(s): R3
 		
-		\paragraph{Removing Quantifiers from an Exercise}
-		\item{\textbf{test-QT-2}}
+		\item{\textbf{test-QT-2}}:Removing Quantifiers from an Exercise
 		
 		Control: Manual
 		
@@ -372,9 +366,7 @@
 		How test will be performed: This test will be executed by removing a quantifier from an exercises to ensure it does not display any quantifying information.
 		
 		Requirement(s): R3
-		
-		\paragraph{Editing Quantifiers of an Exercise}
-		\item{\textbf{test-QT-3}}
+		\item{\textbf{test-QT-3}}:Editing Quantifiers of an Exercise
 		
 		Control: Manual
 		
@@ -391,8 +383,7 @@
 		Requirement(s): R3
 		
 		\subsubsection{Publicity Tests}
-		\paragraph{Publicizing a Workout Routine}
-		\item{\textbf{test-PB-1}}
+		\item{\textbf{test-PB-1}}:Publicizing a Workout Routine
 		
 		Control: Manual
 		
@@ -408,8 +399,7 @@
 		
 		Requirement(s): R4
 		
-		\paragraph{Privatizing a Workout Routine}
-		\item{\textbf{test-PB-2}}
+		\item{\textbf{test-PB-2}}:Privatizing a Workout Routine
 		
 		Control: Manual
 		
@@ -426,8 +416,8 @@
 		Requirement(s): R4
 		
 		\subsubsection{Workout Routine Saving Tests}
-		\paragraph{Saving a Public Workout Routine}
-		\item{\textbf{test-WS-1}}
+	
+		\item{\textbf{test-WS-1}}:Saving a Public Workout Routine
 		
 		Control: Manual
 		
@@ -444,8 +434,7 @@
 		Requirement(s): R5
 		
 		\subsubsection{Browsing Workout Routine Tests}
-		\paragraph{Browsing Workout Routines}
-		\item{\textbf{test-BS-1}}
+		\item{\textbf{test-BS-1}}:Browsing Workout Routines
 		
 		Control: Manual
 		
@@ -461,8 +450,7 @@
 		
 		Requirement(s): R6
 		
-		\paragraph{Search Workout Routines}
-		\item{\textbf{test-BS-2}}
+		\item{\textbf{test-BS-2}}:Search Workout Routines
 		
 		Control: Manual
 		
@@ -479,8 +467,7 @@
 		Requirement(s): R6
 		
 		\subsubsection{User Profile Tests}
-		\paragraph{Creating a User Profile}
-		\item{\textbf{test-UR-1}}
+		\item{\textbf{test-UR-1}}:Creating a User Profile
 		
 		Control: Manual
 		
@@ -496,8 +483,7 @@
 		
 		Requirement(s): R7
 		
-		\paragraph{Viewing Other User Profile}
-		\item{\textbf{test-UP-2}}
+		\item{\textbf{test-UP-2}}:Viewing Other User Profile
 		
 		Control: Manual
 		
@@ -514,8 +500,8 @@
 		Requirement(s): R8
 		
 		\subsubsection{Fitness Goal Tests}
-		\paragraph{Creating a Fitness Goal}
-		\item{\textbf{test-FG-1}}
+		
+		\item{\textbf{test-FG-1}}:Creating a Fitness Goal
 		
 		Control: Manual
 		
@@ -531,8 +517,7 @@
 		
 		Requirement(s): R9
 		
-		\paragraph{Progressing a Fitness Goal}
-		\item{\textbf{test-FG-2}}
+		\item{\textbf{test-FG-2}}:Progressing a Fitness Goal
 		
 		Control: Manual
 		
@@ -589,13 +574,13 @@
 			
 		\item{\textbf{test-id-1}}: Style
 
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual.
 		
 		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: A survey is conducted with various user interactions with the application. 
 		
-		Output/Result: 
+		Output/Result: The survey results will record the overall style quality targeting areas such as simplicity, cleanliness and aesthetic appeal. 
 		
 		How test will be performed: This test will be preformed by conducting a survey to determine if test users think that the products appearance is minimal and straight forward.
 		
@@ -761,15 +746,15 @@
 	\subsubsection{Operational and Environment Tests}
 		\item{\textbf{test-id-1}}: Supported Systems.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application is closed and a mobile device is turned on.
 		
-		Input/Condition: 
+		Input/Condition: The device downloads and launches the application. All hardware required features are attempted on IOS and Android devices.
 		
-		Output/Result: 
+		Output/Result: There should be complete compatibility for both supported systems without and operation system errors. 
 		
-		How test will be performed: 
+		How test will be performed: This test will be done by downloading and running all features on both an IOS and Android device ensuring there are no operation system errors.
 		
 		Requirement(s): NFR13
 	\subsubsection{Maintainability and Support Tests}
@@ -829,31 +814,31 @@
 		
 		Requirement(s): NFR17
 		
-		\item{\textbf{test-id-1}}: Data storage.
+		\item{\textbf{test-id-1}}: Data storage and logging.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Functional
 		
-		Initial State: 
+		Initial State: Application is running 
 		
-		Input/Condition: 
+		Input/Condition: A valid data entry for a workout routine or user is entered into the database.
 		
-		Output/Result: 
+		Output/Result: The entry is successfully added and there is a database recorded log of the interaction.
 		
-		How test will be performed: 
+		How test will be performed: As a data point gets added, there should exist an output log for each interaction, this will be checked by viewing database logs. This will only look at valid data entries because these should get filtered out via unit testing.
 		
 		Requirement(s): NFR18
 		
 		\item{\textbf{test-id-1}}: Data Backups.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Functional, Manual
 		
-		Initial State: 
+		Initial State: Application is running
 		
-		Input/Condition: 
+		Input/Condition: Data entries exist in the database and the database fails.
 		
-		Output/Result: 
+		Output/Result: There should exist a backup of the database from a recent saved state.
 		
-		How test will be performed: 
+		How test will be performed: This can be preformed manually by shutting down the database and checking if the backup is used. This can also be preformed by checking if the backup exists and is refreshed occasionally.
 		
 		Requirement(s): NFR18
 	\subsubsection{Cultural Requirements Tests}
