--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -625,7 +625,7 @@
 		
 		Initial State: The application is running.
 		
-		Input/Condition: User click input of lanauge from dropdown menu.
+		Input/Condition: User click input of language from dropdown menu.
 
 		Output/Result: Language of the application changes to ther users chosen language.
 		
