--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1074,6 +1074,10 @@
 		question, what are at least two approaches to acquiring the knowledge or
 		mastering the skill?  Of the identified approaches, which will each team
 		member pursue, and why did they make this choice?
+		\item Skill: \textbf{Dynamic Testing Knowledge}
+		Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
+		Approach 2: Utilize online resources to learn and improve dynamic testing skills and abilities.
+		Verdict: Yuvraj will use Approach 1 to improve his Dynamic Testing knowledge. He has chosen this strategy because the course provided relevant and detailed notes from a reputable source with a lot of background information to aid in the learning.
 	\end{enumerate}
 	
 \end{document}
