--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -251,7 +251,7 @@
 	\begin{enumerate}
 		
 		\subsubsection{Workout Routine Tests}
-		\item{\textbf{test-WR-1}}:A Workout Routine can be Created
+		\item{\textbf{test-WR-1}}:A Workout Routine can be created
 		
 		Control: Manual
 		
