--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -748,7 +748,7 @@
 		
 		Type: Manual
 		
-		Initial State: The application is closed and a mobile device is turned on.
+		Initial State: The application is closed and the mobile device is turned on.
 		
 		Input/Condition: The device downloads and launches the application. All hardware required features are attempted on IOS and Android devices.
 		
