--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -750,7 +750,7 @@
 		
 		Initial State: The application is closed and the mobile device is turned on.
 		
-		Input/Condition: The device downloads and launches the application. All hardware required features are attempted on IOS and Android devices.
+		Input/Condition: The device downloads and launches the application. All required hardware features are tested on iOS and Android devices.
 		
 		Output/Result: There should be complete compatibility for both supported systems without and operation system errors. 
 		
