--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -752,7 +752,7 @@
 		
 		Input/Condition: The device downloads and launches the application. All required hardware features are tested on iOS and Android devices.
 		
-		Output/Result: There should be complete compatibility for both supported systems without and operation system errors. 
+		Output/Result: There should be complete compatibility for both supported systems without any operation system errors. 
 		
 		How test will be performed: This test will be done by downloading and running all features on both an IOS and Android device ensuring there are no operation system errors.
 		
