--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -754,7 +754,7 @@
 		
 		Output/Result: There should be complete compatibility for both supported systems without any operation system errors. 
 		
-		How test will be performed: This test will be done by downloading and running all features on both an IOS and Android device ensuring there are no operation system errors.
+		How test will be performed: This test will be done by downloading and running all features on both an iOS and Android device ensuring there are no operating system errors.
 		
 		Requirement(s): NFR13
 	\subsubsection{Maintainability and Support Tests}
