--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -606,15 +606,15 @@
 		
 		\item{\textbf{test-id-1}}: Text Language.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: User click input of language from dropdown menu.
+
+		Output/Result: Language of the application changes to ther users chosen language.
 		
-		Output/Result: 
-		
-		How test will be performed: 
+		How test will be performed: Language dropdown will ba manually pressed and a language will be chosen. The application should change all text to the new selected language.
 		
 		Requirement(s): NFR3
 		
@@ -635,7 +635,7 @@
 		\item{\textbf{test-id-1}}: Understandability.
 		
 		Type: Functional, Dynamic, Manual, Static etc.
-		
+
 		Initial State: 
 		
 		Input/Condition: 
@@ -676,29 +676,29 @@
 	\subsubsection{Performance Tests}
 		\item{\textbf{test-id-1}}: Speed and Latency.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Dynamic
 		
-		Initial State: 
+		Initial State: Application will be running.
 		
-		Input/Condition: 
+		Input/Condition: String representing workout name and workout information.
 		
-		Output/Result: 
+		Output/Result: Inputted information updated existing program or new program created and displayed.
 		
-		How test will be performed: 
+		How test will be performed: Program will be inputted and updated utilizing a testing framework that will time whether starting to completion took 10 seconds or less. 
 		
 		Requirement(s): NFR8
 		
 		\item{\textbf{test-id-1}}: Accuracy and Precision of Quantifiers.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application will be running and on the post search page.
 		
-		Input/Condition: 
+		Input/Condition: Search string inputs to view public posts.
 		
-		Output/Result: 
+		Output/Result: Search results with ratings at an accuracy of 2 decimal places.
 		
-		How test will be performed: 
+		How test will be performed: A string will be used to search public posts and all posts will be checked for two decimal places.
 		
 		Requirement(s): NFR9
 		
@@ -774,15 +774,15 @@
 	\subsubsection{Security Tests}
 		\item{\textbf{test-id-1}}: Private and Public Details.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application will be running and logged into a user profile. 
 		
-		Input/Condition: 
+		Input/Condition: Navigate to public user profiles.
 		
-		Output/Result: 
+		Output/Result: Other users profiles should not display any private details such as their passwords or email information. 
 		
-		How test will be performed: 
+		How test will be performed: Search for other user profiles and verify that no private information is being displayed on their profile to other users.
 		
 		Requirement(s): NFR15
 		
@@ -1059,6 +1059,10 @@
 		question, what are at least two approaches to acquiring the knowledge or
 		mastering the skill?  Of the identified approaches, which will each team
 		member pursue, and why did they make this choice?
+		\item Skill: \textbf{Dynamic Testing Knowledge}
+		Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
+		Approach 2: Utilize online resources to learn and improve dynamic testing skills and abilities.
+		Verdict: Yuvraj will use Approach 1 to improve his Dynamic Testing knowledge. He has chosen this strategy because the course provided relevant and detailed notes from a reputable source with a lot of background information to aid in the learning.
 	\end{enumerate}
 	
 \end{document}
