Added dynamic testing for will in reflection appendix

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1070,10 +1070,24 @@
 		Examples of possible knowledge and skills include dynamic testing knowledge,
 		static testing knowledge, specific tool usage etc.  You should look to
 		identify at least one item for each team member.
+		\subsection{Required Skills}
+		\begin{itemize}
+			\item Skill: \textbf{Dynamic Testing}
+			\\ Rationale: Dynamic testing will be a very important part of successfully completing the verification and validation plan for many reasons. Dynamic testing involves executing the system which is required for many parts of integration tests which will be needed for testing the linking between the various parts of the system such as the database interactions and front-back end communication.
+			\\ Team member: William Lee
+		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
 		mastering the skill?  Of the identified approaches, which will each team
 		member pursue, and why did they make this choice?
+		\subsection{Acquiring Knowledge and Mastering skills}
+		\begin{itemize}
+			\item Skill: \textbf{Dynamic Testing}
+			\\ Approach 1: Research and contrast various dynamic testing methods such as whitebox and blackbox methods.
+			\\ Approach 2: Refer to previous notes on Software Testing 3S03 at McMaster University regarding dynamic testing methodology.
+			\\ Verdict: William will use approach 1 to research what methods are the best catered to this project because often tutorials for testing methods go in depth on strategy for approaching dynamic testing. With approach 2, there is only a surface knowledge level of dynamic testing learned from the course. However approach 2 can be used as a good starting point.
+		\end{itemize}
 	\end{enumerate}
+		
 	
 \end{document}
