--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1063,6 +1063,10 @@
 		Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
 		Approach 2: Utilize online resources to learn and improve dynamic testing skills and abilities.
 		Verdict: Yuvraj will use Approach 1 to improve his Dynamic Testing knowledge. He has chosen this strategy because the course provided relevant and detailed notes from a reputable source with a lot of background information to aid in the learning.
+		\item Skill: \textbf{Integration Testing Knowledge}
+		Approach 1: Review and practice integration testing from SWFRENG 3S03: Software Testing.
+		Approach 2: Read online articles on integration testing and consult integration tests in well known open source products.
+		Verdict: Jared will use Approach 2 to learn about integration testing since SFWRENG 3S03 did not cover it in sufficient detail to expand his skills.
 	\end{enumerate}
 	
 \end{document}
