added static testing for skills appendix

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1057,8 +1057,8 @@
 		identify at least one item for each team member.
 		\subsection{Required Skills}
 		\begin{itemize}
-			\item Skill: \textbf{Dynamic Testing}
-			\\ Rationale: Dynamic testing will be a very important part of successfully completing the verification and validation plan for many reasons. Dynamic testing involves executing the system which is required for many parts of integration tests which will be needed for testing the linking between the various parts of the system such as the database interactions and front-back end communication.
+			\item Skill: \textbf{Static Testing}
+			\\ Rationale: Static testing will be a very important part of successfully completing the verification and validation plan for many reasons. Static testing involves matching the requirements to the code. It also involves looking into code error and structure. Having a good structure to the code will help with matching requirements stated in the SRS and validation plan resulting in a more sound product.
 			\\ Team member: William Lee
 		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
@@ -1067,10 +1067,10 @@
 		member pursue, and why did they make this choice?
 		\subsection{Acquiring Knowledge and Mastering skills}
 		\begin{itemize}
-			\item Skill: \textbf{Dynamic Testing}
-			\\ Approach 1: Research and contrast various dynamic testing methods such as whitebox and blackbox methods.
-			\\ Approach 2: Refer to previous notes on Software Testing 3S03 at McMaster University regarding dynamic testing methodology.
-			\\ Verdict: William will use approach 1 to research what methods are the best catered to this project because often tutorials for testing methods go in depth on strategy for approaching dynamic testing. With approach 2, there is only a surface knowledge level of dynamic testing learned from the course. However approach 2 can be used as a good starting point.
+			\item Skill: \textbf{Static Testing Knowledge}
+			\\ Approach 1: Research and contrast various static testing methods such as walkthroughs, code reviews and inspections.
+			\\ Approach 2: Refer to previous notes on Software Testing 3S03 at McMaster University regarding static testing methodology.
+			\\ Verdict: William will use approach 1 to research what methods are the best catered to this project because often tutorials for testing methods go in depth on strategy for approaching static testing. With approach 2, there is only a surface knowledge level of static testing learned from the course. However approach 2 can be used as a good starting point.
 		\end{itemize}
 		\item Skill: \textbf{Dynamic Testing Knowledge}
 		Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
