Added Static testing for will in reflection appendix (#70)
* Added dynamic testing for will in reflection appendix

* added static testing for skills appendix

* added static testing for skills appendix

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -1055,14 +1055,28 @@
 		Examples of possible knowledge and skills include dynamic testing knowledge,
 		static testing knowledge, specific tool usage etc.  You should look to
 		identify at least one item for each team member.
+		\subsection{Required Skills}
+		\begin{itemize}
+			\item Skill: \textbf{Static Testing}
+			\\ Rationale: Static testing will be a very important part of successfully completing the verification and validation plan for many reasons. Static testing involves matching the requirements to the code. It also involves looking into code error and structure. Having a good structure to the code will help with matching requirements stated in the SRS and validation plan resulting in a more sound product.
+			\\ Team member: William Lee
+		\end{itemize}
 		\item For each of the knowledge areas and skills identified in the previous
 		question, what are at least two approaches to acquiring the knowledge or
 		mastering the skill?  Of the identified approaches, which will each team
 		member pursue, and why did they make this choice?
+		\subsection{Acquiring Knowledge and Mastering skills}
+		\begin{itemize}
+			\item Skill: \textbf{Static Testing Knowledge}
+			\\ Approach 1: Research and contrast various static testing methods such as walkthroughs, code reviews and inspections.
+			\\ Approach 2: Refer to previous notes on Software Testing 3S03 at McMaster University regarding static testing methodology.
+			\\ Verdict: William will use approach 1 to research what methods are the best catered to this project because often tutorials for testing methods go in depth on strategy for approaching static testing. With approach 2, there is only a surface knowledge level of static testing learned from the course. However approach 2 can be used as a good starting point.
+		\end{itemize}
 		\item Skill: \textbf{Dynamic Testing Knowledge}
 		Approach 1: Consult notes from previous courses that went over software testing (SFWRENG 3S03: Software Testing) and revisit the relevant course assignments.
 		Approach 2: Utilize online resources to learn and improve dynamic testing skills and abilities.
 		Verdict: Yuvraj will use Approach 1 to improve his Dynamic Testing knowledge. He has chosen this strategy because the course provided relevant and detailed notes from a reputable source with a lot of background information to aid in the learning.
 	\end{enumerate}
+		
 	
 \end{document}
