--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -594,7 +594,7 @@
 		
 		Type: Manual
 		
-		Initial State: The application is running
+		Initial State: The application is running.
 		
 		Input/Condition: Various application screens are shown to users of diverse demographics.
 		
