--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -592,15 +592,15 @@
 	\subsubsection{Usability and Humanity Tests}
 		\item{\textbf{test-id-1}}: Text Sizing and Visibility.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: Various application screens are shown to users of diverse demographics.
 		
-		Output/Result: 
+		Output/Result: The survey results will give an indication for how visible application text is, and if any specific text needs adjustment.
 		
-		How test will be performed: 
+		How test will be performed: A survey is conducted where users of various demographics interact with the application and are asked how visible application text is.
 		
 		Requirement(s): NFR2
 		
@@ -612,7 +612,7 @@
 		
 		Input/Condition: User click input of language from dropdown menu.
 
-		Output/Result: Language of the application changes to ther users chosen language.
+		Output/Result: Language of the application changes to their users' chosen language.
 		
 		How test will be performed: Language dropdown will ba manually pressed and a language will be chosen. The application should change all text to the new selected language.
 		
@@ -620,43 +620,43 @@
 		
 		\item{\textbf{test-id-1}}: Learnability.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: The system is given to a group of users to use for a predetermined time period.
 		
-		Output/Result: 
+		Output/Result: The survey will give an indication of how easy or hard the system is to learn.
 		
-		How test will be performed: 
+		How test will be performed: Each user will be tasked with performing a specific task within a set amount of time, and report how easy or difficult the task was to learn to perform.
 		
 		Requirement(s): NFR4
 		
 		\item{\textbf{test-id-1}}: Understandability.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 
-		Initial State: 
+		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: Various system outputs are shown to a group of users in a survey.
 		
-		Output/Result: 
+		Output/Result: The survey will give an indication of how easy or hard system output is to understand.
 		
-		How test will be performed: 
+		How test will be performed: Each user in the survey is shown various system outputs and asked how easy the outputs are to understand.
 		
 		Requirement(s): NFR5
 		
 		\item{\textbf{test-id-1}}: Hearing and Audio considerations.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: Each system sound is played to a group of users in a survey.
 		
-		Output/Result: 
+		Output/Result: The survey will give an indication on how audible/pleasant the system sounds are.
 		
-		How test will be performed: 
+		How test will be performed: System sounds will be played to users in a survey, who will respond will their perception of the audio's quality.
 		
 		Requirement(s): NFR6
 		
